--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=a2c12b5372a38be839eb1
+GITHUB_CLIENT_SECRET=af2d264ebf81c53244196d5ca162b44513a70bbe1
